<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Exercicio2Activity">

  <TextView
      android:id="@+id/txtitulo2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="144dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="145dp"
      android:layout_marginBottom="670dp"
      android:contentDescription="@string/app_name"
      android:fontFamily="sans-serif"
      android:text="@string/app_name"
      android:textAppearance="@style/TextAppearance.AppCompat.Large"
      android:textSize="34sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0"
      tools:text="@string/app_name" />

  <View
      android:id="@+id/saidaresult2"
      android:layout_width="353dp"
      android:layout_height="632dp"
      android:layout_marginStart="29dp"
      android:layout_marginTop="61dp"
      android:layout_marginEnd="29dp"
      android:layout_marginBottom="38dp"
      android:background="#D5FAFF"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0" />

  <ImageView
      android:id="@+id/img3"
      android:layout_width="125dp"
      android:layout_height="83dp"
      android:layout_marginStart="143dp"
      android:layout_marginTop="632dp"
      android:layout_marginEnd="143dp"
      android:layout_marginBottom="16dp"
      android:contentDescription="@string/paramain"
      android:onClick="paraMain"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/img1" />

  <ImageView
      android:id="@+id/clock"
      android:layout_width="108dp"
      android:layout_height="128dp"
      android:layout_marginStart="151dp"
      android:layout_marginTop="72dp"
      android:layout_marginEnd="152dp"
      android:layout_marginBottom="531dp"
      android:contentDescription="@string/relogio"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/img2" />

  <TextView
      android:id="@+id/cod"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="157dp"
      android:layout_marginTop="200dp"
      android:layout_marginEnd="158dp"
      android:layout_marginBottom="499dp"
      android:text="@string/titulo"
      android:textColor="#031265"
      android:textColorHighlight="#031265"
      android:textColorLink="#031265"
      android:textSize="24sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <Button
      android:id="@+id/btncalcular2"
      style="@style/Widget.AppCompat.Button.Small"
      android:layout_width="238dp"
      android:layout_height="48dp"
      android:layout_marginStart="86dp"
      android:layout_marginTop="455dp"
      android:layout_marginEnd="87dp"
      android:layout_marginBottom="228dp"
      android:background="#031265"
      android:elegantTextHeight="false"
      android:foregroundTint="#3F51B5"
      android:insetBottom="0dp"
      android:onClick="calculartot"
      android:text="@string/calc"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/editcod"
      android:layout_width="238dp"
      android:layout_height="48dp"
      android:layout_marginStart="86dp"
      android:layout_marginTop="298dp"
      android:layout_marginEnd="87dp"
      android:layout_marginBottom="385dp"
      android:autofillHints=""
      android:backgroundTint="#031265"
      android:backgroundTintMode="add"
      android:ems="10"
      android:hint="@string/cod"
      android:inputType="text"
      android:minHeight="48dp"
      android:textColor="#031265"
      android:textColorHint="#031265"
      android:textColorLink="#031265"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:ignore="TextSizeCheck" />

  <EditText
      android:id="@+id/editquant"
      android:layout_width="237dp"
      android:layout_height="58dp"
      android:layout_marginStart="86dp"
      android:layout_marginTop="367dp"
      android:layout_marginEnd="88dp"
      android:layout_marginBottom="306dp"
      android:autofillHints=""
      android:backgroundTint="#031265"
      android:backgroundTintMode="add"
      android:ems="10"
      android:hint='@string/quant'
      android:inputType="numberDecimal"
      android:textColor="#031265"
      android:textColorHighlight="#031265"
      android:textColorHint="#031265"
      android:textColorLink="#031265"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:ignore="VisualLintOverlap" />

  <TextView
      android:id="@+id/saidaresult3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="135dp"
      android:layout_marginTop="531dp"
      android:layout_marginEnd="136dp"
      android:layout_marginBottom="173dp"
      android:text="@string/o_resultado_é"
      android:textColor="#031265"
      android:textSize="20sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/txtcardapio"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="70dp"
      android:layout_marginTop="253dp"
      android:layout_marginEnd="70dp"
      android:layout_marginBottom="459dp"
      android:text="@string/txtcardapio"
      android:textColor="#031265"
      android:textColorHighlight="#031265"
      android:textColorHint="#031265"
      android:textSize="18sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>