<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btncalcular"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/Color2"
    android:foregroundTint="#2196F3"
    tools:context=".MainActivity">

    <View
        android:id="@+id/fundo"
        android:layout_width="353dp"
        android:layout_height="632dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="38dp"
        android:background="#D5FAFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="145dp"
        android:layout_marginBottom="670dp"
        android:contentDescription="@string/app_name"
        android:fontFamily="sans-serif"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/app_name" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="185dp"
        android:layout_height="110dp"
        android:layout_marginStart="113dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="113dp"
        android:layout_marginBottom="536dp"
        android:contentDescription="@string/divisao"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.104"
        app:srcCompat="@drawable/img1"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/editA"
        android:layout_width="237dp"
        android:layout_height="58dp"
        android:layout_marginStart="87dp"
        android:layout_marginTop="219dp"
        android:layout_marginEnd="87dp"
        android:layout_marginBottom="454dp"
        android:autofillHints=""
        android:backgroundTint="#031265"
        android:backgroundTintMode="add"
        android:ems="10"
        android:hint='@string/digite_a'
        android:inputType="numberDecimal"
        android:textColor="#031265"
        android:textColorHint="#031265"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editB"
        android:layout_width="237dp"
        android:layout_height="58dp"
        android:layout_marginStart="87dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="87dp"
        android:layout_marginBottom="353dp"
        android:autofillHints=""
        android:backgroundTint="#031265"
        android:backgroundTintMode="add"
        android:drawableTint="#3F51B5"
        android:ems="10"
        android:hint='@string/digite_b'
        android:inputType="numberDecimal"
        android:textColor="#031265"
        android:textColorHint="#031265"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
        android:layout_width="237dp"
        android:layout_height="48dp"
        android:layout_marginStart="87dp"
        android:layout_marginTop="422dp"
        android:layout_marginEnd="87dp"
        android:layout_marginBottom="264dp"
        android:background="#2196F3"
        android:onClick="calcularMultiplo"
        android:text="Confirmar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,TextContrastCheck" />

    <TextView
        android:id="@+id/textresult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="508dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="193dp"
        android:contentDescription="@string/result"
        android:text="@string/o_resultado_é"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#031265"
        android:textColorHint="#031265"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/result" />

    <ImageView
        android:id="@+id/img2"
        android:layout_width="110dp"
        android:layout_height="70dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="645dp"
        android:layout_marginEnd="151dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/paraExercicio2"
        android:onClick="paraExercicio2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.817"
        app:srcCompat="@drawable/img2"
        tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>